--- a/ProyectoFinalLyA/styles.css
+++ b/ProyectoFinalLyA/styles.css
@@ -1,72 +1,83 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
-  }
-  
-  header {
-    background-color: #007bff;
-    color: #fff;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .logo-container {
-    display: flex;
-    align-items: center;
-  }
-  
-  .logo-container i {
-    font-size: 24px;
-    margin-right: 5px;
-  }
-  
-  h1 {
-    text-align: center;
-    margin-top: 20px; /* Añadido para dar un poco de espacio desde arriba */
-  }
-  
-  .container {
-    max-width: 800px;
-    margin: 20px auto;
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  textarea {
-    width: calc(100% - 20px);
-    height: 150px;
-    margin-bottom: 15px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    resize: none;
-  }
-  
-  .buttons {
-    text-align: center;
-  }
-  
-  button {
-    padding: 10px 20px;
-    margin: 0 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: #007bff;
-    color: #fff;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
-  #outputText {
-    margin-top: 20px;
-  }
-    
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo-container {
+  display: flex;
+  align-items: center;
+}
+
+.logo-container i {
+  font-size: 24px;
+  margin-right: 5px;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.container {
+  max-width: 800px;
+  margin: 20px auto;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+textarea {
+  width: calc(100% - 20px);
+  height: 150px;
+  margin-bottom: 15px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  resize: none;
+}
+
+.buttons {
+  text-align: center;
+}
+
+button {
+  padding: 10px 20px;
+  margin: 0 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+#outputText {
+  margin-top: 20px;
+}
+
+.input-container {
+  position: relative; /* Establecemos un contexto de posicionamiento */
+}
+
+.input-container button {
+  position: absolute; /* Posicionamos el botón de manera absoluta */
+  top: 50%; /* Lo movemos al 50% desde la parte superior */
+  transform: translateY(-50%); /* Ajustamos su posición verticalmente */
+  left: 50%; /* Lo centramos horizontalmente */
+  transform: translateX(-50%); /* Ajustamos su posición horizontalmente */
+}
