--- a/ProyectoFinalLyA/styles.css
+++ b/ProyectoFinalLyA/styles.css
@@ -81,3 +81,23 @@ button:hover {
   left: 50%; /* Lo centramos horizontalmente */
   transform: translateX(-50%); /* Ajustamos su posición horizontalmente */
 }
+
+/* Estilos para la ventana modal */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Fondo semitransparente */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* Asegura que la ventana modal esté por encima de otros elementos */
+}
+
+.modal img {
+  max-width: 80%;
+  max-height: 80%;
+}
+
