--- a/ProyectoFinalLyA/styles.css
+++ b/ProyectoFinalLyA/styles.css
@@ -76,10 +76,37 @@ button:hover {
 
 .input-container button {
   position: absolute;
-  top: 50%; 
-  transform: translateY(-50%); 
-  left: 50%; 
+  top: 50%;
+  transform: translateY(-50%);
+  left: 50%;
   transform: translateX(-50%);
+}
+
+.analysis-container {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px auto;
+  max-width: 800px;
+}
+
+.analysis-section {
+  width: 45%;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.analysis-section h2 {
+  text-align: center;
+}
+
+.analysis-section pre {
+  background-color: #f4f4f4;
+  padding: 10px;
+  border-radius: 5px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 /* Estilos para la ventana modal */
@@ -89,11 +116,11 @@ button:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.7); /* Fondo semitransparente */
+  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999; /* Asegura que la ventana modal esté por encima de otros elementos */
+  z-index: 9999;
 }
 
 .modal img {
